// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddToCart> renders the component for empty items 1`] = `
<DocumentFragment>
  <button
    class="button__root_highPriority button__root clickable__root button__filled"
    disabled=""
    type="button"
  >
    <span
      class="button__content"
    >
      <span>
        Add to Cart
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`<AddToCart> renders the component with disabled property 1`] = `
<DocumentFragment>
  <button
    class="button__root_highPriority button__root clickable__root button__filled"
    disabled=""
    type="button"
  >
    <span
      class="button__content"
    >
      <span>
        Add to Cart
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`<AddToCart> renders the component with simple item 1`] = `
<DocumentFragment>
  <button
    class="button__root_highPriority button__root clickable__root button__filled"
    type="button"
  >
    <span
      class="button__content"
    >
      <span>
        Add to Cart
      </span>
    </span>
  </button>
</DocumentFragment>
`;
